--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "proxy": "http://localhost:5000",
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts --openssl-legacy-provider start --host winv11",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
